--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "next": "^14.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
